<?xml version="1.0"?>
<package format="2">
  <name>pose_regulation_ros1</name>
  <version>0.0.0</version>
  <description>The pose_regulation_ros1 package</description>
  <maintainer email="dorazio@diag.uniroma1.it">Francesco D'Orazio</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  
  <depend>geometry_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>